# vocalize

./: README.md  pyproject.toml
vocalize/: __init__.py  audio.py  cli.py  output.py  pipeline.py  transcriber.py  types.py  web_server.py  web_ui.py
